commit error handling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
+<div class="error text-center" *ngIf="exchangeRateDataError">There appears to be something wrong with providing
+  exchange rates
+  data. Please refresh or try again
+  later. </div>
+
 <div class="text-center">
   <h1>Exchange rates</h1>
 </div>
