--- a/src/app/exchange-rates/exchange-rates-display/exchange-rates-display.component.html
+++ b/src/app/exchange-rates/exchange-rates-display/exchange-rates-display.component.html
@@ -1,6 +1,6 @@
 <div class="table-responsive">
   <table class="table">
-    <th class="cursor-pointer" (click)="sortByCurrency()">Currency <div [ngClass]="currencySort" #sort></div>
+    <th class="cursor-pointer" (click)="sortByCurrency()">Currency <div [ngClass]="currencySort"></div>
     </th>
     <th>Buy</th>
     <th>Sell</th>
